(1) Fixed partially the problem with weekcalendar cell's alignment

--- a/src/main/webapp/css/calendar.css
+++ b/src/main/webapp/css/calendar.css
@@ -83,3 +83,5 @@ p.description {
 	top: -10px;
 	position: relative;
 }
+
+.wc-grid-timeslot-header { vertical-align: top; }
